Fixed groot menu bottom edge spacing

--- a/kamehouse-groot/public/kame-house-groot/kamehouse-groot/css/kamehouse-groot.css
+++ b/kamehouse-groot/public/kame-house-groot/kamehouse-groot/css/kamehouse-groot.css
@@ -145,7 +145,7 @@ a:active {
     width: 38px;
     height: 38px;
     margin-top: 5px;
-    margin-bottom: 7px;
+    margin-bottom: 3px;
     margin-right: 5px;
   }
 }
